Update stylesheet link path in index.html

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Trafalgar provides progressive, and affordable healthcare, accessible on mobile and online for everyone">
     <title>Trafalgar - Virtual Healthcare For You</title>
-    <link rel="stylesheet" href="/scss/style.css">
+    <link rel="stylesheet" href="./scss/style.css">
 </head>
 <body>
     <header class="header">
